--- a/velibnroses/velibnroses/en.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/en.lproj/Localizable.strings
@@ -6,4 +6,4 @@
   Copyright (c) 2013 OneLight Studio. All rights reserved.
 */
 
-"error" = "Oops, an error occurred"
+"error" = "Oops, an error occurred";
