--- a/velibnroses/velibnroses/en.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/en.lproj/Localizable.strings
@@ -16,7 +16,6 @@
 "missing_departure" = "Please enter a departure address.";
 "missing_arrival" = "Please enter an arrival address.";
 "same_location" = "Departure and arrival adresses are too close.";
-"incomplete_search_result" = "Find stations matching with your criteria is difficult for the moment.\nPlease try to increase search radius to improve success chances.";
-"station_title" = "Bikes / Available stands: %1$d / %2$d";
+"incomplete_search_result" = "No route matches your search.";
 
 "jcd_ws_get_data_error" = "Bikes stations data are not accessible for the moment.";
