--- a/velibnroses/velibnroses/en.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/en.lproj/Localizable.strings
@@ -17,7 +17,8 @@
 "missing_arrival" = "Please enter an arrival address.";
 "same_location" = "Departure and arrival adresses are too close.";
 "incomplete_search_result" = "No ride matches your search.";
-"no_more_available_ride" = "Stations data has changed.\nFor the moment, no more stations are available for your ride.";
+"ride_has_changed" = "Stations data has changed.\nAt least one station you have chosen is no more available.\nOneBike has automatically selected for you a new ride.";
+"no_more_available_ride" = "Stations data has changed.\nFor the moment, there is no more station matching your search.";
 "no_location_activated" = "You have deactivated location service on this device.\nOneBike is going to run in fail soft mode.\nTo take advantage of all features, please activate it into Settings > Privacy > Location Services screen.";
 "no_location_allowed" = "You have not allowed access to location services.\nOneBike is going to run in fail soft mode.\nTo take advantage of all features, please allow it into Settings > Privacy > Location Services screen.";
 
