--- a/velibnroses/velibnroses/en.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/en.lproj/Localizable.strings
@@ -22,4 +22,5 @@
 "no_location_activated" = "You have deactivated location service on this device.\nOneBike is going to run in fail soft mode.\nTo take advantage of all features, please activate it into Settings > Privacy > Location Services screen.";
 "no_location_allowed" = "You have not allowed access to location services.\nOneBike is going to run in fail soft mode.\nTo take advantage of all features, please allow it into Settings > Privacy > Location Services screen.";
 
-"jcd_ws_get_data_error" = "Bikes stations data are not accessible for the moment.";
+"jcd_ws_get_data_error" = "An error occured during bikes stations data getting.";
+"google_ws_search_ride_error" = "An error occured during ride search.";
