--- a/velibnroses/velibnroses/fr.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/fr.lproj/Localizable.strings
@@ -22,5 +22,6 @@
 "no_location_activated" = "Vous avez désactivé le service de localisation sur cet appareil.\nOneBike va fonctionner en mode dégradé.\nPour bénéficier de l'ensemble des fonctionnalités, merci de l'activer dans l'écran Réglages > Confidentialité > Service de localisation.";
 "no_location_allowed" = "Vous n'avez pas autorisé l'accès au service de localisation.\nOneBike va fonctionner en mode dégradé.\nPour bénéficier de l'ensemble des fonctionnalités, merci de l'autoriser dans l'écran Réglages > Confidentialité > Service de localisation.";
 
+"jcd_ws_get_data_warning" = "Veuillez patienter quelques instants, les données des stations de vélos sont en train d'être téléchargées ou traitées.";
 "jcd_ws_get_data_error" = "Une erreur s'est produite lors de la récupération des données des stations de vélos.";
 "google_ws_search_ride_error" = "Une erreur s'est produite lors de la recherche de votre itinéraire.";
