--- a/velibnroses/velibnroses/en.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/en.lproj/Localizable.strings
@@ -15,12 +15,12 @@
 "error" = "Oops, an error occurred.";
 "missing_departure" = "Please enter a departure address.";
 "missing_arrival" = "Please enter an arrival address.";
-"same_location" = "Departure and arrival adresses are too close.";
+"same_location" = "Departure and arrival addresses are too close.";
 "incomplete_search_result" = "No ride matches your search.";
-"ride_has_changed" = "Stations data has changed.\nAt least one station you have chosen is no more available.\nOneBike has automatically selected for you a new ride.";
+"ride_has_changed" = "Stations data has changed.\nOneBike has automatically selected for you a new ride.";
 "no_more_available_ride" = "Stations data has changed.\nFor the moment, there is no more station matching your search.";
-"no_location_activated" = "You have deactivated location service on this device.\nOneBike is going to run in fail soft mode.\nTo take advantage of all features, please activate it into Settings > Privacy > Location Services screen.";
-"no_location_allowed" = "You have not allowed access to location services.\nOneBike is going to run in fail soft mode.\nTo take advantage of all features, please allow it into Settings > Privacy > Location Services screen.";
+"no_location_activated" = "To take advantage of all features, please activate location into \"Settings\"";
+"no_location_allowed" = "To take advantage of all features, please allow location into \"Settings\"";
 
 "jcd_ws_get_data_warning" = "Please wait for a moment, bikes stations data are being received or processed.";
 "jcd_ws_get_data_error" = "An error has occurred during bikes stations data getting.";
