--- a/velibnroses/velibnroses/es.lproj/MainStoryboard.strings
+++ b/velibnroses/velibnroses/es.lproj/MainStoryboard.strings
@@ -1,5 +1,5 @@
 /* Class = "IBUIButton"; normalTitle = "Let's go !"; ObjectID = "7ZO-mt-kun"; */
-"7ZO-mt-kun.normalTitle" = "Buscar";
+"7ZO-mt-kun.normalTitle" = "Búscar";
 
 /* Class = "IBUITextField"; placeholder = "Arrival"; ObjectID = "Wdw-ii-7F2"; */
 "Wdw-ii-7F2.placeholder" = "Destino";
