--- a/velibnroses/velibnroses/es.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/es.lproj/Localizable.strings
@@ -21,6 +21,8 @@
 "no_more_available_ride" = "La disponibilidad de las estaciones ha cambiado.\nA No hay estaciones que coinciden con su búsqueda.";
 "no_location_activated" = "Para disfrutar de todas las funciones de la aplicación, gracias para permitir la localización en el menú \"Settings\"";
 "no_location_allowed" = "Para disfrutar de todas las funciones de la aplicación, gracias para permitir la localización en el menú \"Settings\"";
+"no_email_account_defined" = "Please, configure an email account in Mail app.";
+"email_title" = "[OneBike][iPhone] User feedback";
 
 "jcd_ws_get_data_warning" = "Por favor espere, datos de la estación se descargan o procesan.";
 "jcd_ws_get_data_error" = "Se ha producido un error al recuperar datos de las estaciones.";
