--- a/velibnroses/velibnroses/es.lproj/MainStoryboard.strings
+++ b/velibnroses/velibnroses/es.lproj/MainStoryboard.strings
@@ -1,3 +1,6 @@
+/* Class = "IBUIBarButtonItem"; title = "Feedback"; ObjectID = "Tin-JL-JdR"; */
+"Tin-JL-JdR.title" = "Comentario";
+
 /* Class = "IBUIButton"; normalTitle = "Let's go !"; ObjectID = "7ZO-mt-kun"; */
 "7ZO-mt-kun.normalTitle" = "Búscar";
 
