--- a/velibnroses/velibnroses/fr.lproj/MainStoryboard.strings
+++ b/velibnroses/velibnroses/fr.lproj/MainStoryboard.strings
@@ -1,3 +1,6 @@
+/* Class = "IBUIBarButtonItem"; title = "Feedback"; ObjectID = "Tin-JL-JdR"; */
+"Tin-JL-JdR.title" = "Commentaire";
+
 /* Class = "IBUIButton"; normalTitle = "Let's go !"; ObjectID = "7ZO-mt-kun"; */
 "7ZO-mt-kun.normalTitle" = "Rechercher";
 
