--- a/velibnroses/velibnroses/en.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/en.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "missing_departure" = "Please enter a departure address.";
 "missing_arrival" = "Please enter an arrival address.";
 "same_location" = "Departure and arrival addresses are too close.";
+"same_station" = "You'd better walk ;)";
 "incomplete_search_result" = "No ride matches your search.";
 "ride_has_changed" = "Stations data has changed.\nOneBike has automatically selected for you a new ride.";
 "no_more_available_ride" = "Stations data has changed.\nFor the moment, there is no more station matching your search.";
