--- a/velibnroses/velibnroses/es.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/es.lproj/Localizable.strings
@@ -14,6 +14,8 @@
 "dialog_warning_title" = "Alerta";
 "dialog_info_title" = "Info";
 
+"ip_content_img_name" = "IPContentBase.png";
+
 "departure_not_found" = "No hemos encontrado su dirección de inicio.";
 "arrival_not_found" = "No hemos encontrado su dirección de destino.";
 "error" = "Oops, se produjo un error.";
