--- a/velibnroses/velibnroses/es.lproj/MainStoryboard.strings
+++ b/velibnroses/velibnroses/es.lproj/MainStoryboard.strings
@@ -17,7 +17,7 @@
 "Tin-JL-JdR.title" = "Comentario";
 
 /* Class = "IBUIButton"; normalTitle = "Let's go !"; ObjectID = "7ZO-mt-kun"; */
-"7ZO-mt-kun.normalTitle" = "Búscar";
+"7ZO-mt-kun.normalTitle" = "Buscar";
 
 /* Class = "IBUITextField"; placeholder = "Arrival"; ObjectID = "Wdw-ii-7F2"; */
 "Wdw-ii-7F2.placeholder" = "Destino";
