add thanks message on feedback email send

--- a/velibnroses/velibnroses/Base.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/Base.lproj/Localizable.strings
@@ -30,3 +30,4 @@
 "email_title" = "[OneBike][iPhone] User feedback";
 "same_station" = "You'd better walk there ;)";
 "not_the_same_contract" = "The search departure and arrival must be in the same city.";
+"thanks_feedback" = "Thanks for your feedback.";
