--- a/velibnroses/velibnroses/es.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/es.lproj/Localizable.strings
@@ -30,3 +30,4 @@
 "email_title" = "[OneBike][iPhone] Comentario de usuario";
 "same_station" = "Debería ir andando ;)";
 "not_the_same_contract" = "El inicio y el destino de su búsqueda deben encontrarse en la misma ciudad.";
+"thanks_feedback" = "Gracias por su comentario.";
