--- a/velibnroses/velibnroses/fr.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/fr.lproj/Localizable.strings
@@ -30,3 +30,4 @@
 "email_title" = "[OneBike][iPhone] Commentaire utilisateur";
 "same_station" = "Vous feriez mieux d'y aller à pied ;)";
 "not_the_same_contract" = "Le départ et l'arrivée de votre recherche doivent se situer dans la même ville.";
+"thanks_feedback" = "Merci pour votre retour.";
