--- a/velibnroses/velibnroses/Base.lproj/Localizable.strings
+++ b/velibnroses/velibnroses/Base.lproj/Localizable.strings
@@ -31,3 +31,4 @@
 "same_station" = "You'd better walk there ;)";
 "not_the_same_contract" = "The search departure and arrival must be in the same city.";
 "thanks_feedback" = "Thanks for your feedback.";
+"unsupported_contract" = "You search in a city still unsupported by OneBike.";
